Fix spacing in select option.

--- a/src/stylesheets/components/_select.scss
+++ b/src/stylesheets/components/_select.scss
@@ -13,15 +13,6 @@
     @include input-btn-focus(".focus", $input-btn-invalid-color); // sass-lint:disable-line mixins-before-declarations
   }
 
-  .truncate {
-    flex: 0 1 auto;
-
-    & + .truncate {
-      flex: 0 10000 auto; // Truncate second element first
-      margin-left: $space-min;
-    }
-  }
-
   .value,
   .placeholder {
     line-height: $input-height-base - 2px;
@@ -122,15 +113,24 @@
       margin-left: $space-min;
     }
   }
+}
 
-  // Use flexbox only in more complex value/option layouts and let
-  // value/option handle the truncation for text nodes and spans
-  &.column-select,
-  &.resource-select {
-    .value,
-    .option {
-      display: flex;
-      align-items: center;
+// Use flexbox only in more complex value/option layouts and let
+// value/option handle the truncation for text nodes and spans
+.column-select,
+.resource-select {
+  .value,
+  .option {
+    display: flex;
+    align-items: center;
+  }
+
+  .truncate {
+    flex: 0 1 auto;
+
+    & + .truncate {
+      flex: 0 10000 auto; // Truncate second element first
+      margin-left: $space-min;
     }
   }
 }
